--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -443,7 +443,7 @@ jobs:
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
-      - revert-migrations:
+      - revert_migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
 
