--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -443,12 +443,11 @@ jobs:
             echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
             if [[ "${CIRCLE_WORKFLOW_ID:0:7}" != "${OldWorkflowID}" ]]
             then
-<<<<<<< HEAD
+
               aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
               aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
               aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
-            fi          
-=======
+            fi       
               exit 0
             else
               exit 1
@@ -494,7 +493,7 @@ jobs:
 
       - revert_migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
->>>>>>> cba51eec7053b1722894b61fa69ab6a58e55da5c
+
 
 
  
@@ -526,6 +525,6 @@ workflows:
       #      requires: [deploy-frontend, deploy-backend]
       #  - cloudfront-update: 
       #      requires: [smoke-test]
-       - clean-up
+       - cleanup
           #  requires: [cloudfront-update]
       
