--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -447,8 +447,8 @@ jobs:
               aws cloudformation delete-stack --stack-name "stack-create-bucket-${OldWorkflowID}"
             fi
       - destroy-environment:
-          workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
-      - revert-migrations:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - revert_migrations:
           workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
 
   # cloudfront-update:
