--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -260,7 +260,7 @@ jobs:
           command: |
             cd backend
             npm install
-            npm run migrations > migrations_dump.txt
+            npm run migrations | tee migrations_dump.txt      
       - persist_to_workspace:
           root: ~/
           paths:
